# chitchat

./: .gitignore  ALGORITHM.md  Cargo.toml  LICENSE-3rdparty.csv  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
chitchat/: Cargo.toml
chitchat-test/: Cargo.toml  README.md  run-servers.ps1  run-servers.sh
chitchat-test/src/: lib.rs  main.rs
chitchat-test/tests/: cli.rs  helpers.rs
chitchat/src/: configuration.rs  delta.rs  digest.rs  failure_detector.rs  lib.rs  listener.rs  message.rs  serialize.rs  server.rs  state.rs  transport.rs  types.rs
chitchat/src/transport/: channel.rs  mod.rs  udp.rs  utils.rs
chitchat/tests/: cluster_test.rs  perf_test.rs
scuttlebutt/: Cargo.toml
scuttlebutt-test/: Cargo.toml  README.md
scuttlebutt-test/src/: lib.rs  main.rs
scuttlebutt-test/tests/: cli.rs  helpers.rs
scuttlebutt/src/: delta.rs  digest.rs  failure_detector.rs  lib.rs  message.rs  serialize.rs  server.rs  state.rs
src/: delta.rs  digest.rs  failure_detector.rs  lib.rs  message.rs  model.rs  serialize.rs  server.rs  state.rs
