[package]
name = "scuttlebutt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
rand = "0.8"
serde = {version="1", features=["derive"]}
serde_json = "1"

[dev-dependencies]
assert-json-diff = "2"
