[package]
name = "scuttlebutt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
rand = "0.8"
serde = { version="1", features=["derive"] }
serde_json = "1"
tokio = { version = "1.14.0", features = ["net", "sync", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
anyhow = "1.0.51"

[dev-dependencies]
assert-json-diff = "2"
tokio = { version = "1.14.0", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
