[package]
name = "chitchat-test"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chitchat = { version = "0.9.0", path = "../chitchat" }
poem = "3.1.11"
poem-openapi = {version="5.1.15", features = ["swagger-ui"] }
structopt = "0.3"
tokio = { version = "1.28.0", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
anyhow = "1"
tracing-subscriber = "0.3"
cool-id-generator = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", default-features=false, features = ["blocking", "json"] }
