[package]
name = "chitchat"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
description = "Cluster membership library using gossip with Scuttlebutt reconciliation."
repository = "https://github.com/quickwit-oss/chitchat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1"
bytes = "1"
itertools = "0.10.5"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.14.0", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
assert-json-diff = "2"
mock_instant = "0.2.1"
tracing-subscriber = "0.3"

[features]
testsuite = []
